2006-01-11  Jan Schmidt  <thaytan@mad.scientist.com>

	* gst/playback/gstplaybasebin.c: (group_destroy),
	(probe_triggered), (new_decoded_pad), (mute_group_type),
	(set_active_source):
	* gst/playback/gststreaminfo.c: (gst_stream_info_set_mute):
	* gst/playback/gststreamselector.c:
	(gst_stream_selector_base_init),
	(gst_stream_selector_set_property),
	(gst_stream_selector_request_new_pad):
	  Reenable stream selection. These mechanisms need a complete overhaul
	  in the face of 0.8->0.10 changes though.

2006-01-11  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/ogg/gstoggdemux.c:
	  Change the pad template to src_%d to match the pads that 
	  are created from it. decodebin needs this information in order
	  to decide that oggdemux is capable of producing multiple pads
	  (and hence needs queues inserted).

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_queue_pads),
	(gst_ogg_mux_collected):
	  Make debug output more useful by using GST_PTR_FORMAT.

2006-01-11  Tommi Myöhänen  <ext-tommi dot myohanen at nokia dot com>

	Reviewed by: Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/audio/gstringbuffer.c: (gst_ring_buffer_parse_caps):
	  Set depth and width for alaw/mulaw (fixes #326601).

2006-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* tests/icles/Makefile.am:
	  don't build the tests if we don't have the libs

2006-01-10  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/cdparanoia/gstcdparanoiasrc.c: (gst_cd_paranoia_src_close),
	(gst_cd_paranoia_paranoia_callback):
	  Don't try to free NULL pointers.

2006-01-10  Edward Hervey  <edward@fluendo.com>

	* gst/audiorate/gstaudiorate.c: (gst_audio_rate_chain),
	(gst_audio_rate_change_state), (plugin_init):
	Add debugging category.
	Fix type issues.
	Add case for incoming buffers without valid offset/offset_end.

2006-01-10  Michael Smith  <msmith@fluendo.com>

	* gst-libs/gst/audio/gstaudiosrc.c: (gst_audioringbuffer_dispose):
	  Don't leak GCond in audio sources.
